--- a/src/app/java/java.component.html
+++ b/src/app/java/java.component.html
@@ -13,7 +13,14 @@
     </li>
 </ul>
 </div>
-<div class = "col-md-10">
+<div class = "col-md-6" style = "border: solid 2px;">
 <router-outlet></router-outlet>
 </div>
+<div class = "col-md-4">
+   <p> Interview Questions </p>
+   <pre>
+       Implementing Iterator class to accept arrays,
+        collections and maps
+   </pre>
+    </div>
 </div>
