--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <ul class = 'nav nav-pills' >
     <li><a class = 'nav-link' [routerLink] = "['/java']">Java</a></li>
     <li><a class = 'nav-link' routerLink = "/bootstrap">OOPS</a></li>
-    <li><a class = 'nav-link' routerLink = "/bootstrap">Collections</a></li>
+    <li><a class = 'nav-link' routerLink = "/collections">Collections</a></li>
     <li><a class = 'nav-link' routerLink = "/bootstrap">Algorithms</a></li>
     <li><a class = 'nav-link' routerLink = "/bootstrap">Exception Handling</a></li>
     
