--- a/src/app/java/java.component.html
+++ b/src/app/java/java.component.html
@@ -2,15 +2,17 @@
 <div class = "col-md-2">
 
 <ul>
-    <li >
-        <a [routerLink] = "['designpatterns']">Design Patterns</a>
-    </li>
-    <li>
-        <a [routerLink] = "['multithreading']">MultiThreading</a>
-    </li>
-    <li>
-        <a [routerLink] = "['javaio']">Java IO</a>
-    </li>
+    <li ><a [routerLink] = "['designpatterns']">Design Patterns</a></li>
+    <li> <a [routerLink] = "['multithreading']">MultiThreading</a></li>
+    <li> <a [routerLink] = "['javaio']">Java IO</a></li>
+    <li> <a [routerLink] = "['oops']">OOPS</a></li>    
+    <li><a [routerLink] = "['collections']">Collections</a> </li>
+    <li><a [routerLink] = "['exceptionhandling']">Exception Handling</a> </li>
+    <li><a [routerLink] = "['servlets']">Servlets</a> </li>
+    <li><a [routerLink] = "['reflection']">Reflection</a> </li>
+    <li><a [routerLink] = "['regex']">RegularExpressions</a> </li>
+    <li><a [routerLink] = "['generics']">Generics</a> </li>
+    <li><a [routerLink] = "['serialization']">Serialization</a> </li>
 </ul>
 </div>
 <div class = "col-md-6" style = "border: solid 2px;">
