--- a/src/app/designpatterns/designpatterns.component.html
+++ b/src/app/designpatterns/designpatterns.component.html
@@ -1,33 +1,37 @@
-<pre>
-    Creational
-Singleton
-Prototype
-Builder
-Factory
-Abstract Factory
-Object Pool Pattern
-Structural 
-Adapter
+<div>
+    <h5>Creational</h5>
+<ul>
+<li>Singleton</li>
+<li>Prototype</li>
+<li>Builder</li>
+<li>Factory</li>
+<li>Abstract Factory</li>
+<li>Object Pool Pattern</li>
+</ul>
+
+<h5>Structural</h5> 
+<ul>
+    <li>Adapter</li>
 To connect new code to legacy code without changing the working contract of legacy code
 Like a plug adapter
 Can have multiple adapters
 Convert interface to other interface
 Client, adapter, adaptee
 Ex: Arrays.asList()
-Bridge
+<li>Bridge</li>
 Similar to adapter but bridge works with new code
 Decouple abstraction and implementation using encapsulation, composition, inheritance
 Changes in abstraction wont affect the client
 Details are not available initially
 Ex:JDBC drivers
-Composite
+<li>Composite</li>
 Hierarchical type pattern that deals with tree structure of information
 Components represent part or whole of structure
 Obj in tree structures
 Ind object treated as composite
 Same operations on individual and composites
 Ex: component, java.awt
-Decorator
+<li>Decorator</li>
 Hierarchical type pattern with functionality at each level while using composition from similar datatypes
 Wrap another object and add functionality to it
 Add behavior without affecting others
@@ -36,17 +40,22 @@ SRP
 Ex: InputStream
 Inheritance based
 Utilizes composition and inheritance(is-a and has-a)
-Façade
+<li>Façade</li>
 To overcome poorly designed api
 Reduces dependencies on outside code
 Simplify client usage
-Refactoring pattern
-1.	Flyweight
+</ul>
+
+<h5>Refactoring pattern</h5>
+<ol>
+<li>Flyweight</li>
 To reduce the number of objects created
 String
 2.	Filter
 3.	Proxy
-Behavioral
+</ol>
+<h5>Behavioral</h5>
+<ol>
 1.	Chain of responsibility
 2.	Command
 3.	Interpreter
@@ -59,8 +68,9 @@ Behavioral
 10.	Template
 11.	Visitor
 12.	Null Object
-
-J2EE Patterns
+</ol>
+<h5>J2EE Patterns</h5>
+<ol>
 Presentation Layer
 1.	Intercepting Filter
 2.	Front controller 
@@ -77,6 +87,7 @@ Integration Layer
 
 1.	MVC
 2.	Composite Entity
+</ol>
 
 
-</pre>
+</div>
