--- a/src/app/java/java.component.html
+++ b/src/app/java/java.component.html
@@ -13,6 +13,7 @@
     <li><a [routerLink] = "['regex']">RegularExpressions</a> </li>
     <li><a [routerLink] = "['generics']">Generics</a> </li>
     <li><a [routerLink] = "['serialization']">Serialization</a> </li>
+    <li><a [routerLink] = "['java8']">Java 8</a> </li>
 </ul>
 </div>
 <div class = "col-md-6" style = "border: solid 2px;">
